--- a/src/ui/qbeachball_dockwidget_base.ui
+++ b/src/ui/qbeachball_dockwidget_base.ui
@@ -100,8 +100,12 @@ QListWidget::item::selected {
             <string>Use Layer</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_3">
-            <item row="0" column="1">
-             <widget class="QgsMapLayerComboBox" name="events_layer_input"/>
+            <item row="1" column="0">
+             <widget class="QLabel" name="label_4">
+              <property name="text">
+               <string>ID Field</string>
+              </property>
+             </widget>
             </item>
             <item row="0" column="0">
              <widget class="QLabel" name="label_3">
@@ -109,6 +113,12 @@ QListWidget::item::selected {
                <string>Events Layer</string>
               </property>
              </widget>
+            </item>
+            <item row="0" column="1" colspan="2">
+             <widget class="QgsMapLayerComboBox" name="events_layer_input"/>
+            </item>
+            <item row="1" column="1" colspan="2">
+             <widget class="QgsFieldComboBox" name="id_field_select"/>
             </item>
            </layout>
           </widget>
@@ -145,6 +155,11 @@ QListWidget::item::selected {
   </widget>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>QgsFieldComboBox</class>
+   <extends>QComboBox</extends>
+   <header>qgsfieldcombobox.h</header>
+  </customwidget>
   <customwidget>
    <class>QgsFileWidget</class>
    <extends>QWidget</extends>
