--- a/src/ui/qbeachball_dockwidget_base.ui
+++ b/src/ui/qbeachball_dockwidget_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>592</width>
-    <height>799</height>
+    <width>384</width>
+    <height>458</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -42,96 +42,108 @@ QListWidget::item::selected {
        <enum>Qt::Horizontal</enum>
       </property>
       <widget class="QWidget" name="widget_14" native="true">
-       <layout class="QGridLayout" name="gridLayout_2">
-        <item row="5" column="0">
-         <widget class="QPushButton" name="btn_make_svgs">
+       <layout class="QFormLayout" name="formLayout">
+        <item row="0" column="0" colspan="2">
+         <widget class="QLabel" name="label_3">
           <property name="text">
-           <string>Create Icons</string>
+           <string>Events Layer</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
-         <widget class="QgsFileWidget" name="svgs_output_widget">
-          <property name="storageMode">
-           <enum>QgsFileWidget::GetDirectory</enum>
+        <item row="2" column="0" colspan="2">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>ID Field</string>
           </property>
+         </widget>
+        </item>
+        <item row="4" column="0" colspan="2">
+         <widget class="QgsCollapsibleGroupBox" name="tensor_components_group">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="title">
+           <string>Moment Tensor Components</string>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_4">
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_5">
+             <property name="text">
+              <string>Mrr</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1" colspan="3">
+            <widget class="QgsFieldComboBox" name="mrr_input_field"/>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_7">
+             <property name="text">
+              <string>Mpp</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_8">
+             <property name="text">
+              <string>Mrt</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_9">
+             <property name="text">
+              <string>Mrp</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <widget class="QLabel" name="label_10">
+             <property name="text">
+              <string>Mtp</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_6">
+             <property name="text">
+              <string>Mtt</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1" colspan="3">
+            <widget class="QgsFieldComboBox" name="mtt_input_field"/>
+           </item>
+           <item row="2" column="1" colspan="3">
+            <widget class="QgsFieldComboBox" name="mpp_input_field"/>
+           </item>
+           <item row="3" column="1" colspan="3">
+            <widget class="QgsFieldComboBox" name="mrt_input_field"/>
+           </item>
+           <item row="4" column="1" colspan="3">
+            <widget class="QgsFieldComboBox" name="mrp_input_field"/>
+           </item>
+           <item row="5" column="1" colspan="3">
+            <widget class="QgsFieldComboBox" name="mtp_input_field"/>
+           </item>
+          </layout>
          </widget>
         </item>
         <item row="6" column="0">
-         <widget class="QPushButton" name="btn_plot">
-          <property name="text">
-           <string>Plot</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="QTabWidget" name="input_selection_tab">
-          <property name="locale">
-           <locale language="English" country="UnitedStates"/>
-          </property>
-          <property name="currentIndex">
-           <number>1</number>
-          </property>
-          <widget class="QWidget" name="open_file_tab">
-           <property name="locale">
-            <locale language="English" country="UnitedStates"/>
-           </property>
-           <attribute name="title">
-            <string>Open File</string>
-           </attribute>
-           <layout class="QGridLayout" name="gridLayout">
-            <item row="1" column="1">
-             <widget class="QgsFileWidget" name="events_file_input"/>
-            </item>
-            <item row="1" column="0">
-             <widget class="QLabel" name="label">
-              <property name="text">
-               <string>Events File</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-          <widget class="QWidget" name="use_layer_tab">
-           <property name="locale">
-            <locale language="English" country="UnitedStates"/>
-           </property>
-           <attribute name="title">
-            <string>Use Layer</string>
-           </attribute>
-           <layout class="QGridLayout" name="gridLayout_3">
-            <item row="1" column="0">
-             <widget class="QLabel" name="label_4">
-              <property name="text">
-               <string>ID Field</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_3">
-              <property name="text">
-               <string>Events Layer</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="1" colspan="2">
-             <widget class="QgsMapLayerComboBox" name="events_layer_input"/>
-            </item>
-            <item row="1" column="1" colspan="2">
-             <widget class="QgsFieldComboBox" name="id_field_select"/>
-            </item>
-           </layout>
-          </widget>
-         </widget>
-        </item>
-        <item row="1" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>Save plots to:</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
+        <item row="6" column="1">
+         <widget class="QgsFileWidget" name="svgs_output_widget">
+          <property name="storageMode">
+           <enum>QgsFileWidget::GetDirectory</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="0">
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -147,6 +159,26 @@ QListWidget::item::selected {
           </property>
          </spacer>
         </item>
+        <item row="9" column="0" colspan="2">
+         <widget class="QPushButton" name="btn_make_svgs">
+          <property name="text">
+           <string>Create Icons</string>
+          </property>
+         </widget>
+        </item>
+        <item row="11" column="0" colspan="2">
+         <widget class="QPushButton" name="btn_plot">
+          <property name="text">
+           <string>Plot</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0" colspan="2">
+         <widget class="QgsFieldComboBox" name="id_field_select"/>
+        </item>
+        <item row="1" column="0" colspan="2">
+         <widget class="QgsMapLayerComboBox" name="events_layer_input"/>
+        </item>
        </layout>
       </widget>
      </widget>
@@ -155,6 +187,12 @@ QListWidget::item::selected {
   </widget>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>QgsCollapsibleGroupBox</class>
+   <extends>QGroupBox</extends>
+   <header>qgscollapsiblegroupbox.h</header>
+   <container>1</container>
+  </customwidget>
   <customwidget>
    <class>QgsFieldComboBox</class>
    <extends>QComboBox</extends>
